tests/ui/unresolved/unresolved-asterisk-imports.stderr
error[E0432]: unresolved import `not_existing_crate`
  --> $DIR/unresolved-asterisk-imports.rs:1:5
   |
LL | use not_existing_crate::*;
   |     ^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `not_existing_crate`
   |
help: if you wanted to use a crate named `not_existing_crate`, use `cargo add not_existing_crate` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate not_existing_crate;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
